[bugfix] fix z-index for paypal button

--- a/src/app/@pages/user/userPage.component.scss
+++ b/src/app/@pages/user/userPage.component.scss
@@ -31,7 +31,7 @@
 			}
 		}
 		.user-profile-left {
-      z-index: 20;
+      z-index: 15;
       margin-top: .5em;
 			float: none;
 			.card-img-top {
